fix gap and margin top

--- a/styles/pages/landingPage.module.scss
+++ b/styles/pages/landingPage.module.scss
@@ -12,10 +12,10 @@
     .area-1 { 
         display: grid;
         grid-template-columns: 1fr 1fr;
-        margin-top: 130px;
+        margin-top: 120px;
         margin-right: auto;
         margin-left: auto;
-        gap: 20px;
+        gap: 83px;
 
         .grid-item {
             margin-left: 20px;
